Fix responsive dark mode

--- a/desafio-2/anderson/scss/style.scss
+++ b/desafio-2/anderson/scss/style.scss
@@ -100,7 +100,7 @@ body {
     }
 
     .darkmode-div {
-        width: 100%;
+        width: 50%;
         display: flex;
         justify-content: flex-start;
         align-items: center;
@@ -473,7 +473,7 @@ body {
                 }
 
             }
-            
+
         }
 
     }
@@ -506,17 +506,17 @@ body {
     footer {
         display: flex;
         justify-content: center;
+        align-items: center;
         background-color: #000000;
-        height: 40vh;
+        height: 200px;
+        width: 100%;
 
         
         h2 {
-            margin-top: 20vh;
             color: white;
             text-align: center;
-            height: 100px;
             width: 100%;
-            font-size: 2vw;
+            font-size: 1vw;
         }
     }
 
